js/js.translator/testData/incremental/invalidation/genericInlineFunctions/libProxy/proxy.2.kt
inline fun <T> foo_proxy(s: T) = foo(s as String)
